updated media for Project 2

--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -17,9 +17,9 @@
 			<p>Choose a sound file from your hard drive! --> <input type="file" id="upload" title="Upload File" /></p>
 			<label>Track: 
 				<select id="trackSelect">
-					<option value="media/New Adventure Theme.mp3" selected>New Adventure Theme</option>
-					<option value="media/Peanuts Theme.mp3">Peanuts Theme</option>
-					<option value="media/The Picard Song.mp3">The Picard Song</option>
+					<option value="media/Overture.mp3" selected>Overture</option>
+					<option value="media/Adagio For Tron.mp3">Adagio For Tron</option>
+					<option value="media/Derezzed.mp3">Derezzed</option>
 				</select>
 			</label>
 		</section>
