--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -34,8 +34,9 @@
 		<span><input type="checkbox" id="barsCB" checked=true><label for="barsCB">Show Bars</label></span>
 		<span><input type="checkbox" id="circlesCB" checked=true><label for="circlesCB">Show Circles</label></span>
 		<span><input type="checkbox" id="noiseCB" ><label for="noiseCB">Show Noise</label></span>
-		<span><input type="checkbox" id="invertCB" ><label for="invertR">Invert Colors</label></span>
-		<span><input type="checkbox" id="embossCB" ><label for="embossR">Show Emboss</label></span>
+		<span><input type="radio" name="effect" id="invertR" ><label for="invertR">Invert Colors</label></span>
+		<span><input type="radio" name="effect" id="embossR" ><label for="embossR">Show Emboss</label></span>
+		<span><input type="radio" name="effect" id="noneR" ><label for="noneR">No Effect</label></span>
 		<p>
 			<span><label for="highshelfCB">Highshelf Filter (Treble)</label><input type="checkbox" id="highshelfCB"></span>
 			<span><label for="lowshelfCB">Lowshelf Filter (Bass)</label><input type="checkbox" id="lowshelfCB"></span>
